--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-logging.level.root=DEBUG
 secrets.accuweather.apiurl= http://dataservice.accuweather.com
 #secrets.accuweather.apikey= xzHOxgzWaeGBmeNwSxBK9zLmaNFsk23X
 secrets.accuweather.apikey=YTA1vmVViJK7NoQGrQDbzww4X0VrRcrn
@@ -7,8 +6,7 @@ bp-credentials.user= bpUser
 bp-credentials.password= bpPass
 bp-credentials.secretkey= 1PByldIaOZtZBRQiHC_2WSg2isttpCtgbH_vm5bb5xq7TNmi-RZFBP2nVmssmT4nOldFrCDe3eke9djjSERLYw
 
-logging.level.reactor.netty.http.client=DEBUG
-
+#H2 configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
