fix responsecodes, fix injection, add test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 secrets.accuweather.apiurl= http://dataservice.accuweather.com
-#secrets.accuweather.apikey= xzHOxgzWaeGBmeNwSxBK9zLmaNFsk23X
-secrets.accuweather.apikey=YTA1vmVViJK7NoQGrQDbzww4X0VrRcrn
+secrets.accuweather.apikey= xzHOxgzWaeGBmeNwSxBK9zLmaNFsk23X
+#secrets.accuweather.apikey=YTA1vmVViJK7NoQGrQDbzww4X0VrRcrn
 
 bp-credentials.user= bpUser
 bp-credentials.password= bpPass
